--- a/docs/templates/sidebar/versioning.html
+++ b/docs/templates/sidebar/versioning.html
@@ -1,14 +1,18 @@
 {% if versions %}
-<h3>{{ _('Branches') }}</h3>
+{% if versions.branches %}
+<h3>{{ _('Latest') }}</h3>
 <ul>
     {%- for item in versions.branches %}
     <li><a href="{{ item.url }}">{{ item.name }}</a></li>
     {%- endfor %}
 </ul>
-<h3>{{ _('Tags') }}</h3>
+{% endif %}
+{% if versions.tags %}
+<h3>{{ _('Versions') }}</h3>
 <ul>
     {%- for item in versions.tags %}
     <li><a href="{{ item.url }}">{{ item.name }}</a></li>
     {%- endfor %}
 </ul>
+{% endif %}
 {% endif %}
